Fix infobox getting squashed vertically in some cases

--- a/services/oodikone2-frontend/src/components/InfoBox/infoBox.css
+++ b/services/oodikone2-frontend/src/components/InfoBox/infoBox.css
@@ -25,6 +25,8 @@
 .ok-infobox-collapsed.ok-infobox-collapsed.ok-infobox-collapsed {
   margin-bottom: 1em;
   white-space: nowrap;
+  padding-top: 0.8em !important;
+  padding-bottom: 0.8em !important;
 }
 
 .ok-infobox-collapsed i.icon {
